<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvToolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:cardElevation="2.5dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/relToolBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:padding="7dp">

                <ImageButton
                    android:id="@+id/btnBack"
                    style="@style/ButtonBackBlack"
                    android:contentDescription="@null"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvNavTitle"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btnTopRight"
                    app:layout_constraintStart_toEndOf="@id/btnBack"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Transfer" />

                <ImageButton
                    android:id="@+id/btnTopRight"
                    style="@style/ButtonBackBlack"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@null"
                    android:padding="11dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_arrow_back"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/movie_backdrop"
            android:layout_width="match_parent"
            android:layout_height="256dp"
            android:contentDescription="@string/movie_backdrop_image"
            android:fitsSystemWindows="true"
            android:scaleType="centerCrop"
            app:layout_collapseMode="parallax"
            app:layout_constraintTop_toBottomOf="@+id/cvToolBar"
            tools:layout_editor_absoluteX="16dp"
            tools:src="@drawable/bg_round" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cdPoster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="200dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/movie_backdrop">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/movie_poster"
                android:layout_width="132dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/movie_thumbnail_image"
                android:scaleType="fitStart"
                tools:src="@drawable/bg_round" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/release_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/release_date"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/movie_title"
            app:layout_constraintStart_toEndOf="@+id/rating_title"
            app:layout_constraintTop_toTopOf="@+id/rating_title" />

        <TextView
            android:id="@+id/release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/release_date_title"
            app:layout_constraintTop_toBottomOf="@+id/release_date_title"
            tools:text="2019" />

        <TextView
            android:id="@+id/rating_title"
            android:layout_width="57dp"
            android:layout_height="22dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="18dp"
            android:text="@string/rating"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/synopsis"
            app:layout_constraintHorizontal_bias="0.018"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/synopsis" />

        <TextView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/rating_title"
            app:layout_constraintTop_toBottomOf="@+id/rating_title"
            tools:text="7.8/10" />

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="18dp"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textColor="#de000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/cdPoster"
            app:layout_constraintTop_toBottomOf="@+id/movie_backdrop"
            tools:text="The Shawshank Redemption" />

        <TextView
            android:id="@+id/synopsis_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="10dp"
            android:text="@string/synopsis"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cdPoster" />

        <TextView
            android:id="@+id/synopsis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="18dp"
            android:scrollbars="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/synopsis_title"
            tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas lacinia, nibh eget porta consequat, leo ante bibendum risus, vitae ornare ex ex sed nulla." />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="18dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rating" />

        <TextView
            android:id="@+id/trailers_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="16dp"
            android:text="@string/trailers"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/trailer_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trailers_title"
            tools:itemCount="16"
            tools:listitem="@layout/trailer_item" />

        <ImageView
            android:id="@+id/status_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:contentDescription="@string/status_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>